fix: meta data container
